Actions
Bug #1799
closedipadm create-addr arg validation crash
Start date:
2011-11-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
ipadm create-addr -p stateless <interface>
crashes in process_addrconf_addrargs. The parser expects -p stateless=yes|no
.
Updated by David Höppner almost 11 years ago
Can't reproduce this (Illumian 1.0):
$ ipadm create-addr -p stateless e1000g0 ipadm: Invalid arguments usage: create-addr [-t] {-T static <static_args> | -T dhcp <dhcp_args> | -T addrconf <addrconf_args>} <addrobj> static_args = <[-d] -a {local|remote}=addr[/prefixlen]> dhcp_args = <[-w <seconds> | forever]> addrconf_args = <[-i interface-id] [-p {stateful|stateless}={yes|no}]>
Updated by Steven Downum over 10 years ago
I was able to reproduce the crash in process_addrconf_addrargs with the following invocation:
ipaddr create-addr -T addrconf -p stateless e1000g1/sl
According to mdb, the segfault occurs during a strcmp call in the function above. I'll take a look at ipadm this week and post a patch, if possible.
Updated by Steven Downum over 10 years ago
I need to correct the type from my example from above. The following produces the crash:
ipadm create-addr -T addrconf -p stateless e1000g1/sl
Updated by Rich Lowe over 10 years ago
- Status changed from New to Resolved
- Assignee set to Yuri Pankov
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13741 commit:1e57a183c0e9
Actions